fix: Ensure api endpoints yield reproducible ordering